PR 24936: Fix regression in t-narrow spacing
 - Fix regression in t-narrow spacing

--- a/src/components/CompositeHeader/CompositeHeader.scss
+++ b/src/components/CompositeHeader/CompositeHeader.scss
@@ -18,10 +18,9 @@
 
     // sm
     @media (max-width: $ms-screen-sm-max) {
-        .ms-siteLogoContainerOuter {
+        .ms-siteHeader-siteLogo {
             transition: all 0.5s ease;
             @include margin-left(14px);
-            @include margin-right(14px);
         }
 
         .ms-CompositeHeader-collapsible {
